--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1522,6 +1522,56 @@ a {
 .cid-tfXooDYnFG .card-title {
   text-align: center;
 }
+.cid-uvs7g5PGZP {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-uvs7g5PGZP .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uvs7g5PGZP .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-uvs7g5PGZP .img-wrapper {
+  text-align: center;
+}
+.cid-uvs7g5PGZP img {
+  margin: auto;
+  width: 140px;
+  padding-bottom: 2rem;
+}
+.cid-uvs7g5PGZP .row {
+  align-items: flex-start;
+}
+.cid-uvs7g5PGZP .card-wrapper {
+  border-radius: 4px;
+  background: #fafafa;
+}
+@media (max-width: 992px) {
+  .cid-uvs7g5PGZP .card-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+@media (min-width: 768px) {
+  .cid-uvs7g5PGZP .card-wrapper {
+    padding: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-uvs7g5PGZP .card-wrapper {
+    padding: 1rem;
+  }
+}
+.cid-uvs7g5PGZP .card-title {
+  text-align: center;
+}
 .cid-tg2hlIrnS1 {
   padding-top: 30px;
   padding-bottom: 45px;
@@ -2149,6 +2199,48 @@ a {
   margin-top: auto !important;
 }
 .cid-tzW99VSfYW .mbr-section-title {
+  color: #232323;
+}
+.cid-uvscZxWIZU {
+  padding-top: 2rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-uvscZxWIZU img,
+.cid-uvscZxWIZU .item-img {
+  width: 100%;
+}
+.cid-uvscZxWIZU .item:focus,
+.cid-uvscZxWIZU span:focus {
+  outline: none;
+}
+.cid-uvscZxWIZU .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+  position: relative;
+}
+.cid-uvscZxWIZU .item-wrapper {
+  position: unset;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-uvscZxWIZU .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-uvscZxWIZU .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-uvscZxWIZU .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-uvscZxWIZU .mbr-section-title {
   color: #232323;
 }
 .cid-tg7ojpf1c1 {
@@ -2871,7 +2963,7 @@ a {
 }
 .cid-tzEuLnyCBh {
   padding-top: 8rem;
-  padding-bottom: 8rem;
+  padding-bottom: 3rem;
   background-color: #fcf8ff;
 }
 .cid-tzEuLnyCBh .item {
@@ -3489,7 +3581,7 @@ a {
   margin-bottom: 0;
 }
 .cid-tzE7i71Zj4 {
-  padding-top: 30px;
+  padding-top: 75px;
   padding-bottom: 45px;
   background-color: #fcf8ff;
 }
