--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1502,7 +1502,7 @@ a {
 }
 .cid-tfXooDYnFG .card-wrapper {
   border-radius: 4px;
-  background: #fafafa;
+  background: #fcf8ff;
 }
 @media (max-width: 992px) {
   .cid-tfXooDYnFG .card-wrapper {
@@ -1552,7 +1552,7 @@ a {
 }
 .cid-uvs7g5PGZP .card-wrapper {
   border-radius: 4px;
-  background: #fafafa;
+  background: #fcf8ff;
 }
 @media (max-width: 992px) {
   .cid-uvs7g5PGZP .card-wrapper {
